k8s-apps/kubecost/manifests/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubecost-grafana
  namespace: kubecost
spec:
  rules:
  - host: grafana.127.0.0.1.nip.io
    http:
      paths:
      - backend:
          service:
            name: kubecost-grafana
            port:
              name: tcp-service
        path: /
        pathType: Prefix
